<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/interval_modal_constraint_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

        <CheckBox
            android:id="@+id/show_color_picker_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_interval_checkbox_text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/workout_type_group"
            app:layout_constraintTop_toBottomOf="@+id/units_input_constraint_layout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/units_input_constraint_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/workout_units_group"
            app:layout_constraintTop_toBottomOf="@+id/workout_units_group">

            <EditText
                android:id="@+id/reps_input"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/add_interval_reps_toggle_text"
                android:inputType="number"
                android:textAlignment="center"
...
                android:orientation="vertical"
                android:text="@string/interval_unit_minutes"
                android:textAllCaps="true"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/minutes_input"
                app:layout_constraintEnd_toStartOf="@+id/seconds_input" />

            <TextView
                android:id="@+id/seconds_text"
                android:layout_width="75dp"
                android:layout_height="45dp"
                android:gravity="center"
...
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:background="#002B1E1E"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/workout_type_group"
            app:layout_constraintTop_toBottomOf="@+id/interval_name_input">

            <RadioButton
                android:id="@+id/timer_radio_button"
                style="@android:style/Widget.Holo.CompoundButton.RadioButton"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/add_interval_timer_toggle_text"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="246dp" />

            <RadioButton
                android:id="@+id/reps_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_interval_reps_toggle_text"
                tools:layout_editor_absoluteX="103dp"
                tools:layout_editor_absoluteY="246dp" />
        </RadioGroup>
...
